[project]
name = "artifact"
version = "1.0.0"
description = "原神圣遗物词条预测工具 - 基于深度学习的智能预测系统"
requires-python = ">=3.12"
dependencies = [
    "torch==2.5.1",
    "PyQt5==5.15.10",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]  # 打包工具，uv pip install pyinstaller 手动安装

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
artifact = "artifact_predictor:main"

[tool.uv]
required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]

[tool.setuptools.packages.find]
exclude = ["测试", "icon", "强化记录", "数据收集"]